Fix overlapping tags

--- a/web/static/css/home.css
+++ b/web/static/css/home.css
@@ -5,6 +5,13 @@
   justify-content: space-around;
 }
 
+.tags-container {
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  justify-content: center;
+}
+
 .post {
   border-radius:0.5vw;
   text-align:center;
